feat:新增菜单管理 ,role页面逻辑  增加wpf启动项

--- a/BlazorLearnWebApp/BlazorLearnWebApp.csproj
+++ b/BlazorLearnWebApp/BlazorLearnWebApp.csproj
@@ -13,4 +13,14 @@
     <PackageReference Include="FreeSql.Provider.Sqlite" Version="3.2.825" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="Components\Components\EditMenu.cshtml" />
+    <Content Remove="Components\Pages\demo.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Components\Components\EditMenu.cshtml.cs" />
+    <Compile Remove="Components\Pages\demo.razor.cs" />
+  </ItemGroup>
+
 </Project>
