--- a/BlazorLearnWebApp/BlazorLearnWebApp.csproj
+++ b/BlazorLearnWebApp/BlazorLearnWebApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,6 +11,7 @@
     <PackageReference Include="BootstrapBlazor.FontAwesome" Version="8.0.4" />
     <PackageReference Include="FreeSql.Extensions.BaseEntity" Version="3.2.825" />
     <PackageReference Include="FreeSql.Provider.Sqlite" Version="3.2.825" />
+    <PackageReference Include="MiniExcel" Version="1.32.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +22,16 @@
   <ItemGroup>
     <Compile Remove="Components\Components\EditMenu.cshtml.cs" />
     <Compile Remove="Components\Pages\demo.razor.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Asset\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Asset\user_template.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
